Add basic app UI

--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -1,3 +1,8 @@
 @import "base"
+@import "layout"
+@import "components/sidebar"
 @import "components/lock-screen"
+@import "components/empty"
+@import "components/field"
+@import "components/button"
 @import "components/masterpass-input"
