--- a/src/stylesheets/components/lock-screen.sass
+++ b/src/stylesheets/components/lock-screen.sass
@@ -8,11 +8,11 @@
     justify-content: center
     align-items: center
   .top-lock
-    height: 45%
+    height: 50%
     display: flex
-    background: #eee
-    border-bottom: 1px solid #a2b0bc
+    background: #f8f8f8
+    border-bottom: 1px solid #3081c6
   .bottom-lock
-    height: 55%
+    height: 50%
     flex-direction: column
-    background: #cbd6e0
+    background: #4792ff
