--- a/src/stylesheets/base.sass
+++ b/src/stylesheets/base.sass
@@ -5,7 +5,8 @@ html, body
 
 body
   font-family: -apple-system, "Helvetica Neue", Helvetica, sans-serif
-
+  font-weight: 300
+  
 #root
   height: 100%
 
