Add and delete entries

--- a/src/stylesheets/base.sass
+++ b/src/stylesheets/base.sass
@@ -6,7 +6,8 @@ html, body
 body
   font-family: -apple-system, "Helvetica Neue", Helvetica, sans-serif
   font-weight: 300
-  
+  font-size: 14px
+
 #root
   height: 100%
 
