--- a/src/stylesheets/layout.sass
+++ b/src/stylesheets/layout.sass
@@ -50,5 +50,7 @@
         flex: 1
         flex-direction: column
         background: #fff
-        padding: 40px
+        padding: 20px 40px
         border-left: 1px solid #eee
+        &.shaded
+          background: #fafafa
