--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -1,8 +1,11 @@
 @import "base"
+@import "typography"
 @import "layout"
 @import "components/sidebar"
 @import "components/lock-screen"
 @import "components/empty"
+@import "components/entry"
 @import "components/field"
 @import "components/button"
+@import "components/entry-details"
 @import "components/masterpass-input"
