Add copy to clipboard

--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -8,4 +8,5 @@
 @import "components/field"
 @import "components/button"
 @import "components/entry-details"
+@import "components/copied-notification"
 @import "components/masterpass-input"
