--- a/src/stylesheets/components/field.sass
+++ b/src/stylesheets/components/field.sass
@@ -20,6 +20,8 @@
     box-sizing: border-box
     outline: none
     transition: border .3s ease
+    &.secure
+      -webkit-text-security: disc
     &:focus
       border: 1px solid #4792ff
 
