--- a/src/stylesheets/layout.sass
+++ b/src/stylesheets/layout.sass
@@ -46,6 +46,7 @@
       .list
         width: 280px
       .aside
+        position: relative
         display: flex
         flex: 1
         flex-direction: column
