--- a/src/stylesheets/components/field.sass
+++ b/src/stylesheets/components/field.sass
@@ -52,5 +52,13 @@
     svg.view
       display: none
 
-.action .button
-  float: right
+.actions
+  text-align: right
+  .button
+    margin-left: 10px
+  .cancel
+    color: #106cc8
+    cursor: pointer
+    margin-right: 10px
+    &:hover
+      color: darken(#106cc8, 4%)
