--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -3,6 +3,7 @@
 @import "layout"
 @import "components/sidebar"
 @import "components/lock-screen"
+@import "components/search"
 @import "components/empty"
 @import "components/entry"
 @import "components/field"
