Update setup password flow

--- a/src/renderer/stylesheets/components/lock-screen.sass
+++ b/src/renderer/stylesheets/components/lock-screen.sass
@@ -3,14 +3,15 @@
   height: 100%
   flex-direction: column
   user-select: none
+  background: #f8f8f8
   .top-lock, .bottom-lock
     display: flex
+    flex-direction: column
     justify-content: center
     align-items: center
   .top-lock
     height: 50%
     display: flex
-    background: #f8f8f8
     border-bottom: 1px solid #3081c6
   .bottom-lock
     height: 50%
