Add validation on trying to submit empty form

--- a/src/renderer/stylesheets/components/field.sass
+++ b/src/renderer/stylesheets/components/field.sass
@@ -51,6 +51,9 @@
   &.secure-off
     svg.view
       display: none
+  &.error
+    input
+      border: 1px solid #f44336
 
 .actions
   text-align: right
