Highlight current entry

--- a/src/renderer/stylesheets/components/entry.sass
+++ b/src/renderer/stylesheets/components/entry.sass
@@ -5,6 +5,7 @@
   background: #fff
   border-bottom: 1px solid #eee
   cursor: pointer
+  transition: background .2s ease
   .icon
     width: 32px
     margin-right: 10px
@@ -16,3 +17,5 @@
     font-weight: 500
   .secondary
     color: #777
+  &.current
+    background: #f7f8fa
