--- a/src/renderer/stylesheets/layout.sass
+++ b/src/renderer/stylesheets/layout.sass
@@ -36,6 +36,8 @@
       flex-direction: row
       .list
         width: 280px
+        max-height: 100%
+        overflow: auto
       .aside
         position: relative
         display: flex
