--- a/src/renderer/stylesheets/components/masterpass-input.sass
+++ b/src/renderer/stylesheets/components/masterpass-input.sass
@@ -3,7 +3,7 @@
   input
     padding: 12px 20px
     border: 1px solid #3081c6
-    min-width: 200px
+    min-width: 220px
     border-radius: 24px
     font-size: 15px
     outline: none
@@ -16,6 +16,16 @@
     text-align: center
     font-size: 12px
     color: #e74c3c
+  .touchid
+    position: absolute
+    right: 8px
+    top: 7px
+    cursor: pointer
+    path
+      fill: #F74B5D
+    &.hover
+      path
+        fill: #D4123A
   &.error
     input
       border: 1px solid #e74c3c
