Add settings gear and ability to save backup file

--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -12,3 +12,4 @@
 @import "components/entry-details"
 @import "components/copied-notification"
 @import "components/masterpass-input"
+@import "components/dropdown"
