--- a/src/renderer/stylesheets/layout.sass
+++ b/src/renderer/stylesheets/layout.sass
@@ -4,6 +4,7 @@
   flex-direction: row
   user-select: none
   .sidebar
+    position: relative
     width: 76px
     background: #4792ff
   .mainbar
