Add ability to save credit cards and secure notes

--- a/src/renderer/stylesheets/components/entry-details.sass
+++ b/src/renderer/stylesheets/components/entry-details.sass
@@ -24,6 +24,7 @@
     flex-direction: row
     padding: 12px 10px
     border-bottom: 1px solid #ebedf2
+    word-break: break-all
     .label
       width: 80px
       font-size: 14px
@@ -32,6 +33,7 @@
       padding-right: 20px
     .value
       flex: 1
+      padding-right: 8px
     svg
       cursor: pointer
       path
