--- a/src/renderer/stylesheets/components/sidebar.sass
+++ b/src/renderer/stylesheets/components/sidebar.sass
@@ -1,13 +1,16 @@
 .sidebar
-  padding-top: 48px
+  padding-top: 38px
   .add-button, .settings
     width: 50px
-    height: 50px
+    height: 36px
     margin: 0 auto 10px auto
+    padding: 7px 0 7px
     cursor: pointer
     text-align: center
     border-radius: 50%
     transition: background .2s ease
+    path
+      fill: #fff
     &:hover
       background: darken(#4792ff, 3%)
   .add-button
@@ -17,10 +20,10 @@
     line-height: 42px
   .settings
     position: absolute
-    bottom: 5px
+    bottom: 0px
     left: 12px
     > svg
-      margin-top: 11px
+      margin-top: 4px
       path
         fill: #fff
     .dropdown
@@ -28,7 +31,7 @@
       left: 20px
   .switcher
     .item
-      height: 60px
+      height: 53px
       text-align: center
       transition: background .2s ease
       &:hover
@@ -36,6 +39,6 @@
       &.current
         background: darken(#4792ff, 5%)
       svg
-        margin-top: 16px
+        margin-top: 12px
         path
           fill: #fff
