Add site icons to logins

--- a/src/renderer/stylesheets/components/entry.sass
+++ b/src/renderer/stylesheets/components/entry.sass
@@ -11,6 +11,12 @@
   .icon
     width: 32px
     margin-right: 10px
+    border-radius: 50%
+    &.web
+      height: 32px
+      align-items: center
+      path
+        fill: #fff
   .description, .icon
     display: flex
     flex-direction: column
