Add more services icons

--- a/src/renderer/stylesheets/components/entry.sass
+++ b/src/renderer/stylesheets/components/entry.sass
@@ -15,7 +15,7 @@
     &.web
       height: 32px
       align-items: center
-      path
+      path, circle
         fill: #fff
   .description, .icon
     display: flex
