--- a/src/renderer/stylesheets/layout.sass
+++ b/src/renderer/stylesheets/layout.sass
@@ -35,6 +35,7 @@
       display: flex
       flex: 1
       flex-direction: row
+      max-height: calc(100% - 48px)
       .list
         width: 280px
         max-height: 100%
