Add google drive sync for storage file

--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -13,3 +13,4 @@
 @import "components/copied-notification"
 @import "components/masterpass-input"
 @import "components/dropdown"
+@import "components/sync-indicator"
