--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -12,5 +12,7 @@
 @import "components/entry-details"
 @import "components/copied-notification"
 @import "components/masterpass-input"
+@import "components/modal"
+@import "components/settings"
 @import "components/dropdown"
 @import "components/sync-indicator"
