Add password generation settings

--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -8,6 +8,7 @@
 @import "components/empty"
 @import "components/entry"
 @import "components/field"
+@import "components/slider"
 @import "components/button"
 @import "components/entry-details"
 @import "components/copied-notification"
