--- a/src/renderer/stylesheets/components/settings.sass
+++ b/src/renderer/stylesheets/components/settings.sass
@@ -17,7 +17,7 @@
     padding: 20px 10px
     margin: 0
     li
-      padding: 0 10px
+      padding: 2px 10px
       border-radius: 3px
       margin-bottom: 4px
       line-height: 30px
@@ -50,3 +50,21 @@
         left: 10px
       path
         fill: #fff
+    input[type="checkbox"]
+      margin-right: 5px
+    .pass-count
+      display: inline-block
+      margin: 0 10px
+      line-height: 22px
+      border-radius: 3px
+      width: 26px
+      text-align: center
+      background: #4792ff
+      color: #fff
+    .password-sample
+      font-size: 18px
+      font-family: monospace
+      background: #efefef
+      border-radius: 4px
+      padding: 2px 10px
+      max-width: 250px
