--- a/src/renderer/stylesheets/components/sync-indicator.sass
+++ b/src/renderer/stylesheets/components/sync-indicator.sass
@@ -48,6 +48,8 @@
   &.loading .spinner
     animation: load8 1.1s infinite linear
     border-left: 2px solid rgba(71, 146, 255, 0.7)
+  &.static .spinner
+    border-color: rgba(71, 146, 255, 0.3)
   &:not(.loading).success .spinner
     border-color: rgba(6, 146, 2, 0.3)
   &:not(.loading).failure .spinner
