--- a/src/renderer/stylesheets/components/sync-indicator.sass
+++ b/src/renderer/stylesheets/components/sync-indicator.sass
@@ -28,25 +28,15 @@
     border-bottom: 2px solid rgba(71, 146, 255, 0.3)
     border-left: 2px solid rgba(71, 146, 255, 0.3)
     transform: translateZ(0)
-    
-  @-webkit-keyframes load8
-    0%
-      -webkit-transform: rotate(0deg)
-      transform: rotate(0deg)
-    100%
-      -webkit-transform: rotate(360deg)
-      transform: rotate(360deg)
 
-  @keyframes load8
+  @keyframes load
     0%
-      -webkit-transform: rotate(0deg)
       transform: rotate(0deg)
     100%
-      -webkit-transform: rotate(360deg)
       transform: rotate(360deg)
 
   &.loading .spinner
-    animation: load8 1.1s infinite linear
+    animation: load 1.1s infinite linear
     border-left: 2px solid rgba(71, 146, 255, 0.7)
   &.static .spinner
     border-color: rgba(71, 146, 255, 0.3)
