Add caracters limitation to form fields

--- a/src/renderer/stylesheets/components/entry.sass
+++ b/src/renderer/stylesheets/components/entry.sass
@@ -25,6 +25,10 @@
     flex: 1
   .primary
     font-weight: 500
+    max-width: 215px
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
   .secondary
     color: #777
   &.current
