--- a/src/renderer/stylesheets/components/sidebar.sass
+++ b/src/renderer/stylesheets/components/sidebar.sass
@@ -1,10 +1,13 @@
 .sidebar
   padding-top: 38px
+  .settings
+    padding: 11px 0 3px
+  .add-button
+    padding: 7px 0 7px 0
   .add-button, .settings
     width: 50px
     height: 36px
     margin: 0 auto 10px auto
-    padding: 11px 0 3px
     cursor: pointer
     text-align: center
     border-radius: 50%
