Keep sensitive info encrypted after vault is decrypted

--- a/src/renderer/stylesheets/components/field.sass
+++ b/src/renderer/stylesheets/components/field.sass
@@ -46,7 +46,7 @@
   &.secure-on
     svg.hide
       display: none
-    input
+    input, textarea
       -webkit-text-security: disc
   &.secure-off
     svg.view
