Add ability to go back during setup

--- a/src/renderer/stylesheets/components/lock-screen.sass
+++ b/src/renderer/stylesheets/components/lock-screen.sass
@@ -17,3 +17,12 @@
     height: 50%
     flex-direction: column
     background: #4792ff
+  .navigate-back
+    color: #fff
+    font-size: 13px
+    cursor: pointer
+    svg
+      position: relative
+      top: 2px
+      path
+        fill: #fff
