Allow to submit password with enter key on setup flow

--- a/src/renderer/stylesheets/components/lock-screen.sass
+++ b/src/renderer/stylesheets/components/lock-screen.sass
@@ -14,10 +14,13 @@
     display: flex
     border-bottom: 1px solid #3081c6
   .bottom-lock
+    position: relative
     height: 50%
     flex-direction: column
     background: #4792ff
   .navigate-back
+    position: absolute
+    bottom: 30px
     color: #fff
     font-size: 13px
     cursor: pointer
