Add import from Gdrive button to empty state

--- a/src/renderer/stylesheets/components/empty.sass
+++ b/src/renderer/stylesheets/components/empty.sass
@@ -9,7 +9,17 @@
   flex: 1
   justify-content: center
   align-items: center
+  .actions
+    text-align: center
+    padding-top: 90px
+    > div
+      margin-bottom: 10px
   img
     width: 300px
+  h2
+    font-size: 24px
+    font-weight: 300
+    margin: 0
+    color: #3a3a3a
   p
     color: #777
