--- a/src/renderer/stylesheets/components/entry-details.sass
+++ b/src/renderer/stylesheets/components/entry-details.sass
@@ -41,6 +41,13 @@
       &:hover
         path
           fill: #777
+    .tag
+      background: #4792ff
+      color: #fff
+      margin-right: 5px
+      padding: 0 5px 2px 5px
+      font-size: 13px
+      border-radius: 3px
     &:last-child
       border: none
     &.secure .value
