Move audit to separate scope

--- a/src/renderer/stylesheets/components/audit.sass
+++ b/src/renderer/stylesheets/components/audit.sass
@@ -1,6 +1,7 @@
 .audit
+  margin: 0 auto
   min-height: 100px
-  width: 240px
+  width: 280px
   .stats
     margin: 0
     padding: 0
@@ -35,3 +36,17 @@
           border-color: #fdcb6e
         &.level-four
           border-color: #b8e994
+
+.audit-group
+  font-size: 13px
+  font-weight: 500
+  padding: 5px 10px
+  border-bottom: 1px solid #eee
+  &.level-one
+    color: rgba(214, 48, 49, 1)
+  &.level-two
+    color: rgba(225, 112, 85, 1)
+  &.level-three
+    color: rgba(253, 203, 11, 1)
+  &.level-four
+    color: rgba(184, 233, 14, 1)
