--- a/src/renderer/stylesheets/components/sidebar.sass
+++ b/src/renderer/stylesheets/components/sidebar.sass
@@ -1,5 +1,12 @@
 .sidebar
+  display: flex
+  flex-direction: column
   padding-top: 38px
+  .switcher
+    display: flex
+    flex-direction: column
+    flex: 1
+    padding-bottom: 60px
   .settings
     padding: 11px 0 3px
   .add-button
@@ -45,3 +52,7 @@
         margin-top: 12px
         path
           fill: #fff
+  .audit-button
+    width: 100%
+    position: absolute
+    bottom: 65px
