Add audit score

--- a/src/renderer/stylesheets/components/audit.sass
+++ b/src/renderer/stylesheets/components/audit.sass
@@ -1,7 +1,14 @@
 .audit
   margin: 0 auto
   min-height: 100px
-  width: 280px
+  width: 320px
+  .score
+    margin-bottom: 40px
+    .points
+      font-size: 46px
+    .muted
+      color: #8c8c8c
+      font-size: 13px
   .stats
     margin: 0
     padding: 0
