--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -9,6 +9,7 @@
 @import "components/entry"
 @import "components/field"
 @import "components/tag-field"
+@import "components/tag-filter"
 @import "components/slider"
 @import "components/button"
 @import "components/entry-details"
