--- a/src/renderer/stylesheets/components/audit.sass
+++ b/src/renderer/stylesheets/components/audit.sass
@@ -45,15 +45,16 @@
           border-color: #b8e994
 
 .audit-group
-  font-size: 13px
-  font-weight: 500
-  padding: 5px 10px
-  border-bottom: 1px solid #eee
-  &.level-one
+  .title
+    font-size: 13px
+    font-weight: 500
+    padding: 5px 10px
+    border-bottom: 1px solid #eee
+  &.level-one .title
     color: rgba(214, 48, 49, 1)
-  &.level-two
+  &.level-two .title
     color: rgba(225, 112, 85, 1)
-  &.level-three
+  &.level-three .title
     color: rgba(253, 203, 11, 1)
-  &.level-four
+  &.level-four .title
     color: rgba(184, 233, 14, 1)
