Add empty state for tag filter dropdown

--- a/src/renderer/stylesheets/components/dropdown.sass
+++ b/src/renderer/stylesheets/components/dropdown.sass
@@ -28,3 +28,8 @@
       margin-bottom: -2px
       path
         fill: #333
+  .dropdown-empty
+    padding: 10px 15px
+    font-size: 13px
+    color: #999
+    text-align: center
