Align sync indicator to the left for windows and linux

--- a/src/renderer/stylesheets/layout.sass
+++ b/src/renderer/stylesheets/layout.sass
@@ -19,11 +19,12 @@
       flex: 0 1 auto
       z-index: 2
       background: #fff
+      font-weight: 300
       height: 28px
       padding: 10px 20px 10px 10px
       box-shadow: 0 2px 3px rgba(57, 63, 72, 0.1)
       color: #858b8f
-      font-weight: 300
+      -webkit-app-region: no-drag
       .logobar
         display: none
         flex: 1
