--- a/src/renderer/stylesheets/components/sidebar.sass
+++ b/src/renderer/stylesheets/components/sidebar.sass
@@ -7,35 +7,28 @@
     flex-direction: column
     flex: 1
     padding-bottom: 60px
-  .settings
-    padding: 11px 0 3px
-  .add-button
-    padding: 7px 0 7px 0
-  .add-button, .settings
-    width: 50px
+  .add-button, .settings-button
+    display: flex
+    width: 44px
     height: 36px
-    margin: 0 auto 10px auto
+    padding: 4px 0 4px 0
+    margin: 11px auto 6px auto
     cursor: pointer
     text-align: center
     border-radius: 50%
     transition: background .2s ease
+    align-items: center
+    justify-content: center
     path
       fill: #fff
     &:hover
       background: darken(#4792ff, 3%)
-  .add-button
-    color: #fff
-    font-size: 32px
-    font-weight: 400
-    line-height: 42px
   .settings
     position: absolute
-    bottom: 0px
-    left: 12px
-    > svg
-      margin-top: 4px
-      path
-        fill: #fff
+    width: 100%
+    bottom: 5px
+    path
+      fill: #fff
     .dropdown
       bottom: 46px
       left: 20px
@@ -44,14 +37,15 @@
       height: 53px
       text-align: center
       transition: background .2s ease
+      display: flex
+      align-items: center
+      justify-content: center
       &:hover
         background: darken(#4792ff, 2%)
       &.current
         background: darken(#4792ff, 5%)
-      svg
-        margin-top: 12px
-        path
-          fill: #fff
+      path
+        fill: #fff
   .audit-button
     width: 100%
     position: absolute
