--- a/src/renderer/stylesheets/components/sync-indicator.sass
+++ b/src/renderer/stylesheets/components/sync-indicator.sass
@@ -1,6 +1,6 @@
 .sync-indicator
   position: absolute
-  right: 15px
+  left: -54px
   width: 30px
   height: 30px
   border-radius: 50px
@@ -8,7 +8,7 @@
   justify-content: center
   align-items: center
   background: #f5f5f5
-  
+
   svg
     position: absolute
 
@@ -20,10 +20,10 @@
     position: absolute
     top: 2px
     right: 3px
-  
+
   .monochrome path
     fill: #4792ff
-  
+
   .spinner,
   .spinner:after
     border-radius: 50%
@@ -62,3 +62,7 @@
     .error-icon,
     .success-icon
       display: none
+
+body[platform="macos"] .sync-indicator
+  right: 15px
+  left: auto
