--- a/src/renderer/stylesheets/components/tag-filter.sass
+++ b/src/renderer/stylesheets/components/tag-filter.sass
@@ -1,6 +1,7 @@
 .tag-filter
   margin-left: 5px
   padding: 6px 0 0 0
+  -webkit-app-region: no-drag
   .tag-icon
     position: relative
     top: 4px
@@ -26,4 +27,3 @@
       padding: 0 2px 0 5px
       &:hover
         color: rgba(255,255,255,1)
-    
