--- a/src/renderer/stylesheets/components/sidebar.sass
+++ b/src/renderer/stylesheets/components/sidebar.sass
@@ -32,6 +32,10 @@
     .dropdown
       bottom: 46px
       left: 20px
+  .tooltip
+    top: 50%
+    left: 78px
+    transform: translateY(-50%)
   .switcher
     .item
       height: 53px
@@ -46,7 +50,7 @@
         background: darken(#4792ff, 5%)
       path
         fill: #fff
-  .audit-button
-    width: 100%
-    position: absolute
-    bottom: 65px
+    .tooltip-context.bottom
+      position: absolute
+      bottom: 65px
+      width: 100%
