--- a/src/renderer/stylesheets/components/tooltip.sass
+++ b/src/renderer/stylesheets/components/tooltip.sass
@@ -7,7 +7,7 @@
     border-radius: 3px
     background-color: #000
     background-color: hsla(0, 0%, 20%, 0.9)
-    padding: 4px 10px
+    padding: 2px 10px 4px 10px
     color: #fff
     text-align: center
     width: max-content
