Show error messages as a tooltip on sync status indicator

--- a/src/renderer/stylesheets/components/sync-indicator.sass
+++ b/src/renderer/stylesheets/components/sync-indicator.sass
@@ -9,8 +9,14 @@
   align-items: center
   background: #f5f5f5
 
+  .tooltip
+    right: 0
+    top: 29px
+
   svg
     position: absolute
+    top: 6px
+    right: 6px
 
   .success-icon
     position: absolute
