Add UI to change master password

--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -7,6 +7,7 @@
 @import "components/search"
 @import "components/empty"
 @import "components/entry"
+@import "components/input"
 @import "components/field"
 @import "components/tag-field"
 @import "components/tag-filter"
