--- a/src/renderer/stylesheets/components/settings.sass
+++ b/src/renderer/stylesheets/components/settings.sass
@@ -36,10 +36,11 @@
       margin-bottom: 20px
     .section
       margin-bottom: 20px
+    .threefour
+      width: 75%
     .button
       position: relative
       line-height: 12px
-      background: #b2bec3
       &.iconed
         padding-left: 35px
       &.danger
@@ -51,7 +52,7 @@
       path
         fill: #fff
     input[type="checkbox"]
-      margin-right: 5px
+        margin-right: 5px
     .pass-count
       display: inline-block
       margin: 0 10px
