Add loading state and success/error messages for changing password

--- a/src/renderer/stylesheets/components/button.sass
+++ b/src/renderer/stylesheets/components/button.sass
@@ -18,6 +18,7 @@
     &::after
       position: absolute
       right: 10px
+      top: 7px
       content: ''
       display: inline-block
       border-radius: 50%
@@ -34,6 +35,8 @@
   &.disabled
     cursros: default
     background: #b2bec3
+  .status-button &
+    margin-right: 15px
 
 @keyframes spin
   0%
