Add Time-based One-Time Password generation

--- a/src/renderer/stylesheets/components/entry-details.sass
+++ b/src/renderer/stylesheets/components/entry-details.sass
@@ -7,8 +7,8 @@
     margin: 5px 0 0 10px
     cursor: pointer
     path
-      transition: fill .3s ease
-      fill: #aaa
+    transition: fill .3s ease
+    fill: #aaa
     &:hover path
       fill: #777
   h1
@@ -34,13 +34,16 @@
     .value
       flex: 1
       padding-right: 8px
+    .secondary
+      padding: 0 10px
+      color: #777
     svg
       cursor: pointer
       path
-        fill: #aaa
+      fill: #aaa
       &:hover
         path
-          fill: #777
+        fill: #777
     .tag
       background: #4792ff
       color: #fff
