--- a/src/renderer/stylesheets/components/input.sass
+++ b/src/renderer/stylesheets/components/input.sass
@@ -13,3 +13,10 @@ textarea
   transition: border .3s ease
   &:focus
     border: 1px solid #4792ff
+
+input[type="search"]
+  &::-webkit-search-decoration,
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-results-button,
+  &::-webkit-search-results-decoration
+    -webkit-appearance: none
