--- a/src/renderer/stylesheets/components/entry-details.sass
+++ b/src/renderer/stylesheets/components/entry-details.sass
@@ -36,6 +36,8 @@
       padding-right: 8px
     .secondary
       padding: 0 10px
+      font-size: 12px
+      line-height: 1.5
       color: #777
     svg
       cursor: pointer
