Add language translation

--- a/src/renderer/stylesheets/application.sass
+++ b/src/renderer/stylesheets/application.sass
@@ -8,6 +8,7 @@
 @import "components/empty"
 @import "components/entry"
 @import "components/input"
+@import "components/select"
 @import "components/field"
 @import "components/tag-field"
 @import "components/tag-filter"
