--- a/src/renderer/stylesheets/components/entry-details.sass
+++ b/src/renderer/stylesheets/components/entry-details.sass
@@ -26,11 +26,12 @@
     border-bottom: 1px solid #ebedf2
     word-break: break-all
     .label
-      width: 90px
+      width: 110px
       font-size: 14px
       text-align: right
       color: #777
       padding-right: 20px
+      word-break: normal
     .value
       flex: 1
       padding-right: 8px
